Change History
==============

1.2 (unreleased)
----------------


1.1 (2008-12-05)
----------------

* Pass PYTHONPATH generated by recipe into zopeservice.py, so that it
  is properly setup and passed to service controlled environment. This
  makes it possible to use third-party ZConfig extensions with ZEO,
  like iw.rotatezlogs.
  [sidnei]

1.0 (2008-11-04)
----------------

* Bump version number to 1.0 since this has been stable for a long time.
  [wichert]

* Add MANIFEST.in file so we can create a release from an export.
  [wichert]


0.17 (2008-11-04)
-----------------

- Make the log format configurable and change the default to include the
  current time.
  [wichert]


0.16 (2008-10-15)
-----------------

- Adjusted the Supervisord support to ignore the command sent to the script.
  This avoids a `positional arguments are not supported` error.
  [hannosch]

- The launch script now detects if it is being executed from Supervisord.
  This makes it more manageable for Supervisord since it no longer forks.
  [jvloothuis]


0.15 (2008-08-27)
-----------------

- Renamed zeoservice.py to zeoservice.py.in to avoid errors during egg
  creation, as it tries to compile the template file.
  [hannosch]


0.14 (2008-08-21)
-----------------

- Fix the test to not rely on a specific installation folder name.
  [dataflake]

- Added support for a unix socket path in `zeo-address` and expanded the
  test coverage for the `zeopack` script generation.
  [dataflake]

- Add support for ZEO authentication.
  [wichert]


0.13 (2008-03-27)
-----------------

- Fixed call to HandleCommandLine by computing the serviceClassString
  ourselves if our module name is not __main__ (ie, if it was imported
  from another module). This works around the fact that
  HandleCommandLine calls GetServiceClassString which in turn only
  calculates the full path if the original module is __main__.
  [sidnei]

- Fixed generation of runzeo.bat when using ZEO from egg, where ZConfig is not